--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>team-colab</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <footer>
-        <p>&copy; The A Team. All rights reserved.</p>
-    </footer>
+    <header>Header</header>
+    <main>Main</main>
+    <footer><p>&copy; The A Team. All rights reserved.</p></footer>
 </body>
 </html>
