--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <footer>
         <p>&copy; The A Team. All rights reserved.</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
 
